# matrix

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  install_manifest.txt  main.cpp  matrix  matrix-0.0.2-Linux.deb  matrix-0.0.4-Linux.deb  matrix.h  test_matrix  test_matrix.cpp
Testing/Temporary/: CTestCostData.txt
_CPack_Packages/Linux/DEB/: matrix-0.0.3-Linux.deb
_CPack_Packages/Linux/DEB/matrix-0.0.2-Linux/: control  md5sums
_CPack_Packages/Linux/DEB/matrix-0.0.3-Linux/: control  md5sums
_CPack_Packages/Linux/DEB/matrix-0.0.4-Linux/: control  md5sums
doxygen/html/: annotated.html  classMatrix-members.html  classMatrix.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  matrix_8h.html  matrix_8h__dep__incl.map  matrix_8h__dep__incl.md5  matrix_8h__incl.md5  matrix_8h_source.html  test__matrix_8cpp.html  test__matrix_8cpp__incl.map  test__matrix_8cpp__incl.md5
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  related_0.js  searchdata.js
